--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <noscript>Please enable JavaScript</noscript>
     <div class="page first">
         <h1 id="title">114bft68</h1>
         <p id="hello-text"></p>
@@ -80,6 +81,10 @@
             <div>
                 <div id="track"></div>
                 <p>Selecting: <span id="rank-all" class="selected">All</span> || <span id="rank">Beginner</span></p>
+                <div>
+                    <label for="skills-items-better">Proof that the elements have the same interval between each other</label>
+                    <input type="checkbox" id="skills-items-better">
+                </div>
                 <div id="skills-items">
 
                 </div>
@@ -127,7 +132,7 @@
         </div>
     </div>
     <footer>
-        <p id="footer-text">Made by @<a href="https://www.github.com/114bft68">114bft68</a> without love &#128148;  |  No copyright (no one would copy this)</p>
+        <p id="footer-text">Made by @<a href="https://www.github.com/114bft68" target="_blank">114bft68</a> without love &#128148;  |  No copyright (no one would copy this)</p>
     </footer>
     <script src="index.js"></script>
 </body>
